--- a/ltc.cabal
+++ b/ltc.cabal
@@ -22,7 +22,7 @@ Source-repository head
   Location:             https://github.com/scvalex/ltc.git
 
 Library
-  Build-depends:        base >= 4 && < 5, bytestring, directory
+  Build-depends:        base >= 4 && < 5, bytestring, directory, filepath
   Ghc-options:          -Wall
   Extensions:           Safe
   Exposed-modules:      Ltc.Store
