--- a/ltc.cabal
+++ b/ltc.cabal
@@ -22,7 +22,6 @@ Source-repository head
   Location:             https://github.com/scvalex/ltc.git
 
 Library
-  Build-depends:        base >= 4 && < 5, bytestring, directory, filepath
+  Build-depends:        base >= 4 && < 5, bytestring, directory, filepath, hslogger
   Ghc-options:          -Wall
-  Extensions:           Safe
   Exposed-modules:      Ltc.Store
