--- a/ltc.cabal
+++ b/ltc.cabal
@@ -23,6 +23,6 @@ Source-repository head
 
 Library
   Build-depends:        base >= 4 && < 5, bytestring, directory, filepath, hslogger,
-                        SHA
+                        SHA, zlib
   Ghc-options:          -Wall
   Exposed-modules:      Ltc.Store
