--- a/ltc.cabal
+++ b/ltc.cabal
@@ -26,3 +26,15 @@ Library
                         SHA, zlib
   Ghc-options:          -Wall
   Exposed-modules:      Ltc.Store
+
+Test-suite reference
+  Hs-Source-Dirs:       Test, .
+  Main-Is:              ReferenceProps.hs
+  Type:                 exitcode-stdio-1.0
+
+  Build-Depends:        base >= 4 && < 5, bytestring, directory, filepath, hslogger,
+                        SHA, zlib
+  Ghc-Options:          -Wall
+
+  Build-Depends:        test-framework, test-framework-hunit, test-framework-quickcheck2,
+                        HUnit, QuickCheck
