update references Makefile and template

--- a/reference/Makefile
+++ b/reference/Makefile
@@ -1,8 +1,14 @@
-all: references.pdf
+all: interim.pdf
 
-.PHONY: references.pdf references.tex
+.PHONY: references.pdf references.tex interim.pdf interim.tex
 
 references.pdf: references.tex
+	xelatex $< -o $@
+	bibtex references
+	xelatex $< -o $@
+	xelatex $< -o $@
+
+interim.pdf: interim.tex
 	xelatex $< -o $@
 	bibtex references
 	xelatex $< -o $@
@@ -11,8 +17,11 @@ references.pdf: references.tex
 references.tex: README.md
 	pandoc --template template.tex --latex-engine=xelatex --toc $< -o $@
 
+interim.tex: interim.md
+	pandoc --template template.tex --latex-engine=xelatex --toc $< -o $@
+
 clean:
 	rm -f references.{tex,pdf,aux,bbl,blg,log,out}
 
 p:
-	permamake.sh README.md template.tex references.bib
+	permamake.sh template.tex references.bib interim.md
