show urls in bibliography

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -6,13 +6,12 @@ interim.pdf: interim.tex
 	xelatex $< -o $@
 	bibtex interim
 	xelatex $< -o $@
-	xelatex $< -o $@
 
 interim.tex: interim.md
 	pandoc --template template.tex --latex-engine=xelatex --toc $< -o $@
 
 clean:
-	rm -f {references,interim}.{tex,pdf,aux,bbl,blg,log,out}
+	rm -f {references,interim}.{tex,pdf,aux,bbl,blg,log,out,bcf}
 
 p:
 	permamake.sh template.tex interim.bib interim.md Makefile
