--- a/ltc.cabal
+++ b/ltc.cabal
@@ -23,8 +23,9 @@ Source-repository head
 
 Library
   Build-depends:        base >= 4 && < 5, bytestring, directory, filepath, hslogger,
-                        SHA, zlib
+                        sexp, SHA, vector-clock, zlib
   Ghc-options:          -Wall
+  Extensions:           ScopedTypeVariables
   Exposed-modules:      Ltc.Store
 
 Test-suite reference
@@ -33,8 +34,9 @@ Test-suite reference
   Type:                 exitcode-stdio-1.0
 
   Build-Depends:        base >= 4 && < 5, bytestring, directory, filepath, hslogger,
-                        SHA, zlib
+                        sexp, SHA, vector-clock, zlib
   Ghc-Options:          -Wall
+  Extensions:           ScopedTypeVariables
 
   Build-Depends:        test-framework, test-framework-hunit, test-framework-quickcheck2,
                         HUnit, QuickCheck
