--- a/ltc.cabal
+++ b/ltc.cabal
@@ -28,9 +28,9 @@ Library
   Extensions:           ScopedTypeVariables
   Exposed-modules:      Ltc.Store
 
-Test-suite reference
+Test-suite store
   Hs-Source-Dirs:       Test, .
-  Main-Is:              ReferenceProps.hs
+  Main-Is:              StoreProps.hs
   Type:                 exitcode-stdio-1.0
 
   Build-Depends:        base >= 4 && < 5, bytestring, directory, filepath, hslogger,
