--- a/ltc.cabal
+++ b/ltc.cabal
@@ -22,7 +22,7 @@ Source-repository head
   Location:             https://github.com/scvalex/ltc.git
 
 Library
-  Build-depends:        base >= 4 && < 5, bytestring, data-default, directory, filepath,
+  Build-depends:        base >= 4 && < 5, bytestring, directory, filepath,
                         hslogger, sexp, SHA, vector-clock, zlib
   Ghc-options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
@@ -33,7 +33,7 @@ Test-suite store
   Main-Is:              StoreProps.hs
   Type:                 exitcode-stdio-1.0
 
-  Build-Depends:        base >= 4 && < 5, bytestring, data-default, directory, filepath,
+  Build-Depends:        base >= 4 && < 5, bytestring, directory, filepath,
                         hslogger, sexp, SHA, vector-clock, zlib
   Ghc-Options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
