--- a/ltc.cabal
+++ b/ltc.cabal
@@ -41,3 +41,16 @@ Test-suite store
 
   Build-Depends:        test-framework, test-framework-hunit, test-framework-quickcheck2,
                         HUnit, QuickCheck
+
+Test-suite redis
+  Hs-Source-Dirs:       Test, .
+  Main-Is:              RedisProps.hs
+  Type:                 exitcode-stdio-1.0
+
+  Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
+                        filepath, hslogger, sexp, SHA, vector-clock, zlib
+  Ghc-Options:          -Wall
+  Extensions:           ScopedTypeVariables, OverloadedStrings
+
+  Build-Depends:        test-framework, test-framework-hunit, test-framework-quickcheck2,
+                        HUnit, QuickCheck
