s/ltc/ltc-tool/

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -37,7 +37,7 @@ Executable ltc
   Build-depends:        cmdargs
   Ghc-options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
-  Main-is:              ltc.hs
+  Main-is:              ltc-tool.hs
 
 Test-suite store
   Hs-Source-Dirs:       Test, .
