fill in more of the Redis pipeline

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -23,8 +23,8 @@ Source-repository head
 
 Library
   Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
-                        filepath, hslogger, network, pipes >= 3.1, sexp, SHA, vector-clock,
-                        zlib
+                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec, sexp,
+                        SHA, vector-clock, zlib
   Ghc-options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
   Exposed-modules:      Ltc.Store, Ltc.Store.Simple, Ltc.Store.Class
@@ -32,8 +32,8 @@ Library
 
 Executable ltc
   Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
-                        filepath, hslogger, network, pipes >= 3.1, sexp, SHA, vector-clock,
-                        zlib
+                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec, sexp,
+                        SHA, vector-clock, zlib
   Build-depends:        cmdargs
   Ghc-options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
@@ -43,10 +43,9 @@ Test-suite store
   Hs-Source-Dirs:       Test, .
   Main-Is:              StoreProps.hs
   Type:                 exitcode-stdio-1.0
-
   Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
-                        filepath, hslogger, network, pipes >= 3.1, sexp, SHA, vector-clock,
-                        zlib
+                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec, sexp,
+                        SHA, vector-clock, zlib
   Ghc-Options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
 
@@ -57,10 +56,9 @@ Test-suite redis
   Hs-Source-Dirs:       Test, .
   Main-Is:              RedisProps.hs
   Type:                 exitcode-stdio-1.0
-
   Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
-                        filepath, hslogger, network, pipes >= 3.1, sexp, SHA, vector-clock,
-                        zlib
+                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec, sexp,
+                        SHA, vector-clock, zlib
   Ghc-Options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
 
