--- a/ltc.cabal
+++ b/ltc.cabal
@@ -23,8 +23,8 @@ Source-repository head
 
 Library
   Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
-                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec, sexp,
-                        SHA, vector-clock, zlib
+                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec,
+                        regex-tdfa, sexp, SHA, vector-clock, zlib
   Ghc-options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
   Exposed-modules:      Ltc.Store, Ltc.Store.Simple, Ltc.Store.Class
@@ -32,8 +32,8 @@ Library
 
 Executable ltc
   Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
-                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec, sexp,
-                        SHA, vector-clock, zlib
+                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec,
+                        regex-tdfa, sexp, SHA, vector-clock, zlib
   Build-depends:        cmdargs
   Ghc-options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
@@ -44,8 +44,8 @@ Test-suite store
   Main-Is:              StoreProps.hs
   Type:                 exitcode-stdio-1.0
   Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
-                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec, sexp,
-                        SHA, vector-clock, zlib
+                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec,
+                        regex-tdfa, sexp, SHA, vector-clock, zlib
   Ghc-Options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
 
@@ -57,8 +57,8 @@ Test-suite redis
   Main-Is:              RedisProps.hs
   Type:                 exitcode-stdio-1.0
   Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
-                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec, sexp,
-                        SHA, vector-clock, zlib
+                        filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec,
+                        regex-tdfa, sexp, SHA, vector-clock, zlib
   Ghc-Options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
 
