--- a/ltc.cabal
+++ b/ltc.cabal
@@ -28,7 +28,8 @@ Library
   Ghc-options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
   Exposed-modules:      Ltc.Store, Ltc.Store.Simple, Ltc.Store.Class
-  Other-modules:        Network.Redis, Network.RedisServer, Ltc.Adapter.RedisAdapter
+  Other-modules:        Network.Redis, Network.RedisServer, Ltc.Adapter.RedisAdapter,
+                        Ltc.Store.Diff
 
 Executable ltc
   Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
