--- a/ltc.cabal
+++ b/ltc.cabal
@@ -60,6 +60,7 @@ Test-suite diff
   Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
                         filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec,
                         regex-tdfa, sexp >= 0.6, SHA, unix, vector-clock, zlib
+  Build-depends:        random
   Ghc-Options:          -Wall
   Extensions:           ScopedTypeVariables, OverloadedStrings
 
