--- a/ltc.cabal
+++ b/ltc.cabal
@@ -22,7 +22,7 @@ Source-repository head
   Location:             https://github.com/scvalex/ltc.git
 
 Library
-  Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
+  Build-depends:        array, attoparsec, base >= 4 && < 5, bytestring, containers, directory,
                         filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec,
                         regex-tdfa, sexp >= 0.6, SHA, unix, vector-clock, zlib
   Ghc-options:          -Wall
@@ -32,7 +32,7 @@ Library
                         Ltc.Store.Diff
 
 Executable ltc
-  Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
+  Build-depends:        array, attoparsec, base >= 4 && < 5, bytestring, containers, directory,
                         filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec,
                         regex-tdfa, sexp >= 0.6, SHA, unix, vector-clock, zlib
   Build-depends:        cmdargs
@@ -44,7 +44,7 @@ Test-suite store
   Hs-Source-Dirs:       Test, .
   Main-Is:              StoreProps.hs
   Type:                 exitcode-stdio-1.0
-  Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
+  Build-depends:        array, attoparsec, base >= 4 && < 5, bytestring, containers, directory,
                         filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec,
                         regex-tdfa, sexp >= 0.6, SHA, unix, vector-clock, zlib
   Ghc-Options:          -Wall
@@ -57,7 +57,7 @@ Test-suite diff
   Hs-Source-Dirs:       Test, .
   Main-Is:              DiffProps.hs
   Type:                 exitcode-stdio-1.0
-  Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
+  Build-depends:        array, attoparsec, base >= 4 && < 5, bytestring, containers, directory,
                         filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec,
                         regex-tdfa, sexp >= 0.6, SHA, unix, vector-clock, zlib
   Build-depends:        random
@@ -70,7 +70,7 @@ Test-suite redis
   Hs-Source-Dirs:       Test, .
   Main-Is:              RedisProps.hs
   Type:                 exitcode-stdio-1.0
-  Build-depends:        attoparsec, base >= 4 && < 5, bytestring, containers, directory,
+  Build-depends:        array, attoparsec, base >= 4 && < 5, bytestring, containers, directory,
                         filepath, hslogger, network, pipes >= 3.1, pipes-attoparsec,
                         regex-tdfa, sexp >= 0.6, SHA, unix, vector-clock, zlib
   Ghc-Options:          -Wall
