encapsualte version control like bits into a separate module

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -49,6 +49,7 @@ Library
                         Ltc.Store.Diff,
                         Ltc.Store.Simple,
                         Ltc.Store.Serialization,
+                        Ltc.Store.VersionControl,
                         Network.Redis,
                         Network.RedisServer
 
