--- a/ltc.cabal
+++ b/ltc.cabal
@@ -44,13 +44,13 @@ Library
                         zlib
   Exposed-modules:
                         Ltc.Adapter.RedisAdapter,
-                        Ltc.Node,
                         Ltc.Store,
                         Ltc.Store.Class,
                         Ltc.Store.Diff,
                         Ltc.Store.Simple,
                         Ltc.Store.Serialization,
                         Ltc.Store.VersionControl,
+                        Network.NodeServer,
                         Network.Redis,
                         Network.RedisServer
 
