keep REPL history for ltc-tool

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -64,6 +64,8 @@ Executable ltc
                         bytestring,
                         cmdargs,
                         containers,
+                        directory,
+                        filepath,
                         haskeline,
                         ltc,
                         network,
