better logging for Simple and NodeServer

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -67,6 +67,7 @@ Executable ltc
                         directory,
                         filepath,
                         haskeline,
+                        hslogger,
                         ltc,
                         network,
                         random,
