move base Store types to their own module

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -48,8 +48,10 @@ Library
                         Ltc.Store,
                         Ltc.Store.Class,
                         Ltc.Store.Diff,
+                        Ltc.Store.EventHandler,
                         Ltc.Store.Simple,
                         Ltc.Store.Serialization,
+                        Ltc.Store.Types,
                         Ltc.Store.VersionControl,
                         Network.NodeProtocol,
                         Network.NodeServer,
