monkey alters data randomly

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -38,6 +38,7 @@ Library
                         network,
                         pipes >= 3.1,
                         pipes-attoparsec,
+                        random,
                         regex-tdfa,
                         sexp >= 0.6,
                         SHA,
