add null abstract network interface

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -64,6 +64,7 @@ Library
                         Ltc.Monkey,
                         Network.Interface,
                         Network.Interface.UDP,
+                        Network.Interface.Null,
                         Network.NodeProtocol,
                         Network.NodeServer,
                         Network.Redis,
