get rid of Ltc.Adapter hierarchy

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -70,7 +70,7 @@ Library
                         Network.RedisServer,
                         Network.StatusServer
   Other-modules:
-                        Ltc.Adapter.RedisAdapter,
+                        Network.RedisAdapter,
                         Network.Types
 
 Executable ltc
