fill in one half of rock-paper-scissors example

--- a/ltc.cabal
+++ b/ltc.cabal
@@ -99,7 +99,10 @@ Executable ltc-rps
   Extensions:           ScopedTypeVariables, OverloadedStrings
   Main-is:              examples/RockPaperScissors.hs
   Build-depends:        base >= 4 && < 5,
-                        ltc
+                        cereal,
+                        ltc,
+                        sexp,
+                        stm
 
 Test-suite store
   Hs-Source-Dirs:       test
